fix slick buttons z-index; improve search styling
resolved slick next/prev buttons z-index problem, updated styling for
search field and button, use proper title for event results

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -29,7 +29,7 @@ $black: #060808;
 }
 #{$all-buttons} {
   // background-color: #f00;
-  font-size: rem(22);
+  font-size: rem(21);
 }
 #{$all-buttons-focus},
 #{$all-buttons-hover} {
@@ -73,7 +73,7 @@ $slick-button-radius: 5;
   height:100%;
   width:rem(30);
   // opacity: 0.4;
-  z-index:1000;
+  z-index:10;
   &:hover {
     background:$black;
     // opacity: 0.5;
